2013-05-27  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/nlib.lisp (MAKE-INPUT-FILENAME): Move to sys-utility.boot.
	* boot/ast.boot (bfIS1): Handle Lisp keywords.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/nlib.lisp (GET-DIRECTORY-LIST): Move to sys-utility.boot.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/lisplib.boot: Replace $FILEP with makeFullFilePath.
	* interp/setvars.boot: Likewise.
	* interp/nlib.lisp ($FILEP): Remove.
	($OUTFILEP): Likewise.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-os.boot (getWorkingDirectory): New.  Define via FFI.
	Replace all uses of GET-CURRENT-DIRECTORY.
	* interp/daase.lisp (GET-CURRENT-DIRECTORY): Remove.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/nlib.lisp (MAKE-FULL-NAMESTRING): Move to sys-utility.boot.
	Rename to makeFullFilePath.  Adjust callers.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/boolean.spad.pamphlet (IndexedBits)[<]: Define in Spad.
	* interp/bits.lisp: Remove.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/sys-utility.boot (makeFilename): Move from nlib.lisp.
	* interp/nlib.lisp (MAKE-FILENAME): Move to sys-utility.boot.
	Adjust callers.
	* boot/tokens.boot: Add new builtins: filePath, filePath?,
	filePathDirectory, filePathName, filePathString, filePathType,
	makeFilePath.

2013-05-26  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* interp/nlib.lisp (ADDOPTIONS): Move to sys-utility.boot.
	* interp/sys-utility.boot (addCompilerOption): Rename from ADDOPTIONS.

2013-05-25  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* algebra/logic.spad.pamphlet: New file.
	* algebra/boolean.spad.pamphlet (Logic): Move there.
	(BooleanLogic): Likewise.
	(PropositionalLogic): Likewise.
	(PropositionalFormula): Likewise.
	(PropositionalFormulaFunctions1): Likewise.
	(PropositionalFormulaFunctions2): Likewise.